--- a/src/app/map-components/map-filter/map-filter.component.css
+++ b/src/app/map-components/map-filter/map-filter.component.css
@@ -27,12 +27,13 @@
 
 .filter-list {
   position: absolute;
-  top: 0;
+  top: 100px;
   right: -100%;
   max-width: 50%;
   width: 50vh;
-  height: calc(100% - 60px);
-  background: rgba(227, 227, 227, 1);
+  height: calc(100% - 100px - 100px);
+  background: rgba(227, 227, 227, 0.85);
+  border-radius: 30px;
   transition: 0.5s;
   text-align: center;
   overflow: hidden;
@@ -40,10 +41,9 @@
 
 .filter-list mat-chip-list {
   position: relative;
-  top: 110px;
+  top: 10px;
   max-width: fit-content;
   left: 5px;
-  padding-bottom: 100px;
 }
 
 .y-scrollable {
@@ -52,8 +52,12 @@
   box-sizing: content-box;
   overflow-y: scroll;
   overflow-x: hidden;
-  height: calc(100vh - 60px);
-  margin-bottom: 100px;
+  height: calc(100%);
+}
+
+.placeholder {
+  width: 100%;
+  height: 10vh;
 }
 
 .buffer {
